[package]
name = "drone-stm32-map-pieces"
version = "0.10.2"
authors = ["Valentine Valyaeff <valentine.valyaeff@gmail.com>"]
edition = "2018"
repository = "https://github.com/drone-os/drone-stm32-map"
homepage = "https://www.drone-os.com/"
documentation = "https://api.drone-os.com/drone-stm32-map/0.10/drone_stm32_map_pieces/"
license = "MIT OR Apache-2.0"
description = """
STM32 peripheral mappings for Drone, an Embedded Operating System.
"""

[lib]
path = "lib.rs"

[features]
default = []
stm32f100 = [
    "drone-cortex-m/cortex_m3_r1p1",
    "drone-stm32-map-pieces-1/stm32f100",
    "drone-stm32-map-pieces-2/stm32f100",
    "drone-stm32-map-pieces-3/stm32f100",
    "drone-stm32-map-pieces-4/stm32f100",
    "drone-stm32-map-pieces-5/stm32f100",
    "drone-stm32-map-pieces-6/stm32f100",
    "drone-stm32-map-pieces-7/stm32f100",
    "drone-stm32-map-pieces-8/stm32f100",
    "drone-stm32-map-pieces-9/stm32f100",
    "drone-stm32-map-pieces-10/stm32f100",
    "drone-stm32-map-pieces-11/stm32f100",
    "drone-stm32-map-pieces-12/stm32f100",
]
stm32f101 = [
    "drone-cortex-m/cortex_m3_r1p1",
    "drone-stm32-map-pieces-1/stm32f101",
    "drone-stm32-map-pieces-2/stm32f101",
    "drone-stm32-map-pieces-3/stm32f101",
    "drone-stm32-map-pieces-4/stm32f101",
    "drone-stm32-map-pieces-5/stm32f101",
    "drone-stm32-map-pieces-6/stm32f101",
    "drone-stm32-map-pieces-7/stm32f101",
    "drone-stm32-map-pieces-8/stm32f101",
    "drone-stm32-map-pieces-9/stm32f101",
    "drone-stm32-map-pieces-10/stm32f101",
    "drone-stm32-map-pieces-11/stm32f101",
    "drone-stm32-map-pieces-12/stm32f101",
]
stm32f102 = [
    "drone-cortex-m/cortex_m3_r1p1",
    "drone-stm32-map-pieces-1/stm32f102",
    "drone-stm32-map-pieces-2/stm32f102",
    "drone-stm32-map-pieces-3/stm32f102",
    "drone-stm32-map-pieces-4/stm32f102",
    "drone-stm32-map-pieces-5/stm32f102",
    "drone-stm32-map-pieces-6/stm32f102",
    "drone-stm32-map-pieces-7/stm32f102",
    "drone-stm32-map-pieces-8/stm32f102",
    "drone-stm32-map-pieces-9/stm32f102",
    "drone-stm32-map-pieces-10/stm32f102",
    "drone-stm32-map-pieces-11/stm32f102",
    "drone-stm32-map-pieces-12/stm32f102",
]
stm32f103 = [
    "drone-cortex-m/cortex_m3_r1p1",
    "drone-stm32-map-pieces-1/stm32f103",
    "drone-stm32-map-pieces-2/stm32f103",
    "drone-stm32-map-pieces-3/stm32f103",
    "drone-stm32-map-pieces-4/stm32f103",
    "drone-stm32-map-pieces-5/stm32f103",
    "drone-stm32-map-pieces-6/stm32f103",
    "drone-stm32-map-pieces-7/stm32f103",
    "drone-stm32-map-pieces-8/stm32f103",
    "drone-stm32-map-pieces-9/stm32f103",
    "drone-stm32-map-pieces-10/stm32f103",
    "drone-stm32-map-pieces-11/stm32f103",
    "drone-stm32-map-pieces-12/stm32f103",
]
stm32f107 = [
    "drone-cortex-m/cortex_m3_r1p1",
    "drone-stm32-map-pieces-1/stm32f107",
    "drone-stm32-map-pieces-2/stm32f107",
    "drone-stm32-map-pieces-3/stm32f107",
    "drone-stm32-map-pieces-4/stm32f107",
    "drone-stm32-map-pieces-5/stm32f107",
    "drone-stm32-map-pieces-6/stm32f107",
    "drone-stm32-map-pieces-7/stm32f107",
    "drone-stm32-map-pieces-8/stm32f107",
    "drone-stm32-map-pieces-9/stm32f107",
    "drone-stm32-map-pieces-10/stm32f107",
    "drone-stm32-map-pieces-11/stm32f107",
    "drone-stm32-map-pieces-12/stm32f107",
]
stm32f401 = [
    "drone-cortex-m/cortex_m4f_r0p1",
    "drone-stm32-map-pieces-1/stm32f401",
    "drone-stm32-map-pieces-2/stm32f401",
    "drone-stm32-map-pieces-3/stm32f401",
    "drone-stm32-map-pieces-4/stm32f401",
    "drone-stm32-map-pieces-5/stm32f401",
    "drone-stm32-map-pieces-6/stm32f401",
    "drone-stm32-map-pieces-7/stm32f401",
    "drone-stm32-map-pieces-8/stm32f401",
    "drone-stm32-map-pieces-9/stm32f401",
    "drone-stm32-map-pieces-10/stm32f401",
    "drone-stm32-map-pieces-11/stm32f401",
    "drone-stm32-map-pieces-12/stm32f401",
]
stm32f405 = [
    "drone-cortex-m/cortex_m4f_r0p1",
    "drone-stm32-map-pieces-1/stm32f405",
    "drone-stm32-map-pieces-2/stm32f405",
    "drone-stm32-map-pieces-3/stm32f405",
    "drone-stm32-map-pieces-4/stm32f405",
    "drone-stm32-map-pieces-5/stm32f405",
    "drone-stm32-map-pieces-6/stm32f405",
    "drone-stm32-map-pieces-7/stm32f405",
    "drone-stm32-map-pieces-8/stm32f405",
    "drone-stm32-map-pieces-9/stm32f405",
    "drone-stm32-map-pieces-10/stm32f405",
    "drone-stm32-map-pieces-11/stm32f405",
    "drone-stm32-map-pieces-12/stm32f405",
]
stm32f407 = [
    "drone-cortex-m/cortex_m4f_r0p1",
    "drone-stm32-map-pieces-1/stm32f407",
    "drone-stm32-map-pieces-2/stm32f407",
    "drone-stm32-map-pieces-3/stm32f407",
    "drone-stm32-map-pieces-4/stm32f407",
    "drone-stm32-map-pieces-5/stm32f407",
    "drone-stm32-map-pieces-6/stm32f407",
    "drone-stm32-map-pieces-7/stm32f407",
    "drone-stm32-map-pieces-8/stm32f407",
    "drone-stm32-map-pieces-9/stm32f407",
    "drone-stm32-map-pieces-10/stm32f407",
    "drone-stm32-map-pieces-11/stm32f407",
    "drone-stm32-map-pieces-12/stm32f407",
]
stm32f410 = [
    "drone-cortex-m/cortex_m4f_r0p1",
    "drone-stm32-map-pieces-1/stm32f410",
    "drone-stm32-map-pieces-2/stm32f410",
    "drone-stm32-map-pieces-3/stm32f410",
    "drone-stm32-map-pieces-4/stm32f410",
    "drone-stm32-map-pieces-5/stm32f410",
    "drone-stm32-map-pieces-6/stm32f410",
    "drone-stm32-map-pieces-7/stm32f410",
    "drone-stm32-map-pieces-8/stm32f410",
    "drone-stm32-map-pieces-9/stm32f410",
    "drone-stm32-map-pieces-10/stm32f410",
    "drone-stm32-map-pieces-11/stm32f410",
    "drone-stm32-map-pieces-12/stm32f410",
]
stm32f411 = [
    "drone-cortex-m/cortex_m4f_r0p1",
    "drone-stm32-map-pieces-1/stm32f411",
    "drone-stm32-map-pieces-2/stm32f411",
    "drone-stm32-map-pieces-3/stm32f411",
    "drone-stm32-map-pieces-4/stm32f411",
    "drone-stm32-map-pieces-5/stm32f411",
    "drone-stm32-map-pieces-6/stm32f411",
    "drone-stm32-map-pieces-7/stm32f411",
    "drone-stm32-map-pieces-8/stm32f411",
    "drone-stm32-map-pieces-9/stm32f411",
    "drone-stm32-map-pieces-10/stm32f411",
    "drone-stm32-map-pieces-11/stm32f411",
    "drone-stm32-map-pieces-12/stm32f411",
]
stm32f412 = [
    "drone-cortex-m/cortex_m4f_r0p1",
    "drone-stm32-map-pieces-1/stm32f412",
    "drone-stm32-map-pieces-2/stm32f412",
    "drone-stm32-map-pieces-3/stm32f412",
    "drone-stm32-map-pieces-4/stm32f412",
    "drone-stm32-map-pieces-5/stm32f412",
    "drone-stm32-map-pieces-6/stm32f412",
    "drone-stm32-map-pieces-7/stm32f412",
    "drone-stm32-map-pieces-8/stm32f412",
    "drone-stm32-map-pieces-9/stm32f412",
    "drone-stm32-map-pieces-10/stm32f412",
    "drone-stm32-map-pieces-11/stm32f412",
    "drone-stm32-map-pieces-12/stm32f412",
]
stm32f413 = [
    "drone-cortex-m/cortex_m4f_r0p1",
    "drone-stm32-map-pieces-1/stm32f413",
    "drone-stm32-map-pieces-2/stm32f413",
    "drone-stm32-map-pieces-3/stm32f413",
    "drone-stm32-map-pieces-4/stm32f413",
    "drone-stm32-map-pieces-5/stm32f413",
    "drone-stm32-map-pieces-6/stm32f413",
    "drone-stm32-map-pieces-7/stm32f413",
    "drone-stm32-map-pieces-8/stm32f413",
    "drone-stm32-map-pieces-9/stm32f413",
    "drone-stm32-map-pieces-10/stm32f413",
    "drone-stm32-map-pieces-11/stm32f413",
    "drone-stm32-map-pieces-12/stm32f413",
]
stm32f427 = [
    "drone-cortex-m/cortex_m4f_r0p1",
    "drone-stm32-map-pieces-1/stm32f427",
    "drone-stm32-map-pieces-2/stm32f427",
    "drone-stm32-map-pieces-3/stm32f427",
    "drone-stm32-map-pieces-4/stm32f427",
    "drone-stm32-map-pieces-5/stm32f427",
    "drone-stm32-map-pieces-6/stm32f427",
    "drone-stm32-map-pieces-7/stm32f427",
    "drone-stm32-map-pieces-8/stm32f427",
    "drone-stm32-map-pieces-9/stm32f427",
    "drone-stm32-map-pieces-10/stm32f427",
    "drone-stm32-map-pieces-11/stm32f427",
    "drone-stm32-map-pieces-12/stm32f427",
]
stm32f429 = [
    "drone-cortex-m/cortex_m4f_r0p1",
    "drone-stm32-map-pieces-1/stm32f429",
    "drone-stm32-map-pieces-2/stm32f429",
    "drone-stm32-map-pieces-3/stm32f429",
    "drone-stm32-map-pieces-4/stm32f429",
    "drone-stm32-map-pieces-5/stm32f429",
    "drone-stm32-map-pieces-6/stm32f429",
    "drone-stm32-map-pieces-7/stm32f429",
    "drone-stm32-map-pieces-8/stm32f429",
    "drone-stm32-map-pieces-9/stm32f429",
    "drone-stm32-map-pieces-10/stm32f429",
    "drone-stm32-map-pieces-11/stm32f429",
    "drone-stm32-map-pieces-12/stm32f429",
]
stm32f446 = [
    "drone-cortex-m/cortex_m4f_r0p1",
    "drone-stm32-map-pieces-1/stm32f446",
    "drone-stm32-map-pieces-2/stm32f446",
    "drone-stm32-map-pieces-3/stm32f446",
    "drone-stm32-map-pieces-4/stm32f446",
    "drone-stm32-map-pieces-5/stm32f446",
    "drone-stm32-map-pieces-6/stm32f446",
    "drone-stm32-map-pieces-7/stm32f446",
    "drone-stm32-map-pieces-8/stm32f446",
    "drone-stm32-map-pieces-9/stm32f446",
    "drone-stm32-map-pieces-10/stm32f446",
    "drone-stm32-map-pieces-11/stm32f446",
    "drone-stm32-map-pieces-12/stm32f446",
]
stm32f469 = [
    "drone-cortex-m/cortex_m4f_r0p1",
    "drone-stm32-map-pieces-1/stm32f469",
    "drone-stm32-map-pieces-2/stm32f469",
    "drone-stm32-map-pieces-3/stm32f469",
    "drone-stm32-map-pieces-4/stm32f469",
    "drone-stm32-map-pieces-5/stm32f469",
    "drone-stm32-map-pieces-6/stm32f469",
    "drone-stm32-map-pieces-7/stm32f469",
    "drone-stm32-map-pieces-8/stm32f469",
    "drone-stm32-map-pieces-9/stm32f469",
    "drone-stm32-map-pieces-10/stm32f469",
    "drone-stm32-map-pieces-11/stm32f469",
    "drone-stm32-map-pieces-12/stm32f469",
]
stm32l4x1 = [
    "drone-cortex-m/cortex_m4f_r0p1",
    "drone-stm32-map-pieces-1/stm32l4x1",
    "drone-stm32-map-pieces-2/stm32l4x1",
    "drone-stm32-map-pieces-3/stm32l4x1",
    "drone-stm32-map-pieces-4/stm32l4x1",
    "drone-stm32-map-pieces-5/stm32l4x1",
    "drone-stm32-map-pieces-6/stm32l4x1",
    "drone-stm32-map-pieces-7/stm32l4x1",
    "drone-stm32-map-pieces-8/stm32l4x1",
    "drone-stm32-map-pieces-9/stm32l4x1",
    "drone-stm32-map-pieces-10/stm32l4x1",
    "drone-stm32-map-pieces-11/stm32l4x1",
    "drone-stm32-map-pieces-12/stm32l4x1",
]
stm32l4x2 = [
    "drone-cortex-m/cortex_m4f_r0p1",
    "drone-stm32-map-pieces-1/stm32l4x2",
    "drone-stm32-map-pieces-2/stm32l4x2",
    "drone-stm32-map-pieces-3/stm32l4x2",
    "drone-stm32-map-pieces-4/stm32l4x2",
    "drone-stm32-map-pieces-5/stm32l4x2",
    "drone-stm32-map-pieces-6/stm32l4x2",
    "drone-stm32-map-pieces-7/stm32l4x2",
    "drone-stm32-map-pieces-8/stm32l4x2",
    "drone-stm32-map-pieces-9/stm32l4x2",
    "drone-stm32-map-pieces-10/stm32l4x2",
    "drone-stm32-map-pieces-11/stm32l4x2",
    "drone-stm32-map-pieces-12/stm32l4x2",
]
stm32l4x3 = [
    "drone-cortex-m/cortex_m4f_r0p1",
    "drone-stm32-map-pieces-1/stm32l4x3",
    "drone-stm32-map-pieces-2/stm32l4x3",
    "drone-stm32-map-pieces-3/stm32l4x3",
    "drone-stm32-map-pieces-4/stm32l4x3",
    "drone-stm32-map-pieces-5/stm32l4x3",
    "drone-stm32-map-pieces-6/stm32l4x3",
    "drone-stm32-map-pieces-7/stm32l4x3",
    "drone-stm32-map-pieces-8/stm32l4x3",
    "drone-stm32-map-pieces-9/stm32l4x3",
    "drone-stm32-map-pieces-10/stm32l4x3",
    "drone-stm32-map-pieces-11/stm32l4x3",
    "drone-stm32-map-pieces-12/stm32l4x3",
]
stm32l4x5 = [
    "drone-cortex-m/cortex_m4f_r0p1",
    "drone-stm32-map-pieces-1/stm32l4x5",
    "drone-stm32-map-pieces-2/stm32l4x5",
    "drone-stm32-map-pieces-3/stm32l4x5",
    "drone-stm32-map-pieces-4/stm32l4x5",
    "drone-stm32-map-pieces-5/stm32l4x5",
    "drone-stm32-map-pieces-6/stm32l4x5",
    "drone-stm32-map-pieces-7/stm32l4x5",
    "drone-stm32-map-pieces-8/stm32l4x5",
    "drone-stm32-map-pieces-9/stm32l4x5",
    "drone-stm32-map-pieces-10/stm32l4x5",
    "drone-stm32-map-pieces-11/stm32l4x5",
    "drone-stm32-map-pieces-12/stm32l4x5",
]
stm32l4x6 = [
    "drone-cortex-m/cortex_m4f_r0p1",
    "drone-stm32-map-pieces-1/stm32l4x6",
    "drone-stm32-map-pieces-2/stm32l4x6",
    "drone-stm32-map-pieces-3/stm32l4x6",
    "drone-stm32-map-pieces-4/stm32l4x6",
    "drone-stm32-map-pieces-5/stm32l4x6",
    "drone-stm32-map-pieces-6/stm32l4x6",
    "drone-stm32-map-pieces-7/stm32l4x6",
    "drone-stm32-map-pieces-8/stm32l4x6",
    "drone-stm32-map-pieces-9/stm32l4x6",
    "drone-stm32-map-pieces-10/stm32l4x6",
    "drone-stm32-map-pieces-11/stm32l4x6",
    "drone-stm32-map-pieces-12/stm32l4x6",
]
stm32l4r5 = [
    "drone-cortex-m/cortex_m4f_r0p1",
    "drone-stm32-map-pieces-1/stm32l4r5",
    "drone-stm32-map-pieces-2/stm32l4r5",
    "drone-stm32-map-pieces-3/stm32l4r5",
    "drone-stm32-map-pieces-4/stm32l4r5",
    "drone-stm32-map-pieces-5/stm32l4r5",
    "drone-stm32-map-pieces-6/stm32l4r5",
    "drone-stm32-map-pieces-7/stm32l4r5",
    "drone-stm32-map-pieces-8/stm32l4r5",
    "drone-stm32-map-pieces-9/stm32l4r5",
    "drone-stm32-map-pieces-10/stm32l4r5",
    "drone-stm32-map-pieces-11/stm32l4r5",
    "drone-stm32-map-pieces-12/stm32l4r5",
]
stm32l4r7 = [
    "drone-cortex-m/cortex_m4f_r0p1",
    "drone-stm32-map-pieces-1/stm32l4r7",
    "drone-stm32-map-pieces-2/stm32l4r7",
    "drone-stm32-map-pieces-3/stm32l4r7",
    "drone-stm32-map-pieces-4/stm32l4r7",
    "drone-stm32-map-pieces-5/stm32l4r7",
    "drone-stm32-map-pieces-6/stm32l4r7",
    "drone-stm32-map-pieces-7/stm32l4r7",
    "drone-stm32-map-pieces-8/stm32l4r7",
    "drone-stm32-map-pieces-9/stm32l4r7",
    "drone-stm32-map-pieces-10/stm32l4r7",
    "drone-stm32-map-pieces-11/stm32l4r7",
    "drone-stm32-map-pieces-12/stm32l4r7",
]
stm32l4r9 = [
    "drone-cortex-m/cortex_m4f_r0p1",
    "drone-stm32-map-pieces-1/stm32l4r9",
    "drone-stm32-map-pieces-2/stm32l4r9",
    "drone-stm32-map-pieces-3/stm32l4r9",
    "drone-stm32-map-pieces-4/stm32l4r9",
    "drone-stm32-map-pieces-5/stm32l4r9",
    "drone-stm32-map-pieces-6/stm32l4r9",
    "drone-stm32-map-pieces-7/stm32l4r9",
    "drone-stm32-map-pieces-8/stm32l4r9",
    "drone-stm32-map-pieces-9/stm32l4r9",
    "drone-stm32-map-pieces-10/stm32l4r9",
    "drone-stm32-map-pieces-11/stm32l4r9",
    "drone-stm32-map-pieces-12/stm32l4r9",
]
stm32l4s5 = [
    "drone-cortex-m/cortex_m4f_r0p1",
    "drone-stm32-map-pieces-1/stm32l4s5",
    "drone-stm32-map-pieces-2/stm32l4s5",
    "drone-stm32-map-pieces-3/stm32l4s5",
    "drone-stm32-map-pieces-4/stm32l4s5",
    "drone-stm32-map-pieces-5/stm32l4s5",
    "drone-stm32-map-pieces-6/stm32l4s5",
    "drone-stm32-map-pieces-7/stm32l4s5",
    "drone-stm32-map-pieces-8/stm32l4s5",
    "drone-stm32-map-pieces-9/stm32l4s5",
    "drone-stm32-map-pieces-10/stm32l4s5",
    "drone-stm32-map-pieces-11/stm32l4s5",
    "drone-stm32-map-pieces-12/stm32l4s5",
]
stm32l4s7 = [
    "drone-cortex-m/cortex_m4f_r0p1",
    "drone-stm32-map-pieces-1/stm32l4s7",
    "drone-stm32-map-pieces-2/stm32l4s7",
    "drone-stm32-map-pieces-3/stm32l4s7",
    "drone-stm32-map-pieces-4/stm32l4s7",
    "drone-stm32-map-pieces-5/stm32l4s7",
    "drone-stm32-map-pieces-6/stm32l4s7",
    "drone-stm32-map-pieces-7/stm32l4s7",
    "drone-stm32-map-pieces-8/stm32l4s7",
    "drone-stm32-map-pieces-9/stm32l4s7",
    "drone-stm32-map-pieces-10/stm32l4s7",
    "drone-stm32-map-pieces-11/stm32l4s7",
    "drone-stm32-map-pieces-12/stm32l4s7",
]
stm32l4s9 = [
    "drone-cortex-m/cortex_m4f_r0p1",
    "drone-stm32-map-pieces-1/stm32l4s9",
    "drone-stm32-map-pieces-2/stm32l4s9",
    "drone-stm32-map-pieces-3/stm32l4s9",
    "drone-stm32-map-pieces-4/stm32l4s9",
    "drone-stm32-map-pieces-5/stm32l4s9",
    "drone-stm32-map-pieces-6/stm32l4s9",
    "drone-stm32-map-pieces-7/stm32l4s9",
    "drone-stm32-map-pieces-8/stm32l4s9",
    "drone-stm32-map-pieces-9/stm32l4s9",
    "drone-stm32-map-pieces-10/stm32l4s9",
    "drone-stm32-map-pieces-11/stm32l4s9",
    "drone-stm32-map-pieces-12/stm32l4s9",
]

[dependencies.drone-core]
version = "0.10.0"
path = "../../../drone-core"

[dependencies.drone-cortex-m]
version = "0.10.0"
path = "../../../drone-cortex-m"

[dependencies.drone-stm32-map-pieces-1]
version = "=0.10.2"
path = "1"

[dependencies.drone-stm32-map-pieces-2]
version = "=0.10.2"
path = "2"

[dependencies.drone-stm32-map-pieces-3]
version = "=0.10.2"
path = "3"

[dependencies.drone-stm32-map-pieces-4]
version = "=0.10.2"
path = "4"

[dependencies.drone-stm32-map-pieces-5]
version = "=0.10.2"
path = "5"

[dependencies.drone-stm32-map-pieces-6]
version = "=0.10.2"
path = "6"

[dependencies.drone-stm32-map-pieces-7]
version = "=0.10.2"
path = "7"

[dependencies.drone-stm32-map-pieces-8]
version = "=0.10.2"
path = "8"

[dependencies.drone-stm32-map-pieces-9]
version = "=0.10.2"
path = "9"

[dependencies.drone-stm32-map-pieces-10]
version = "=0.10.2"
path = "10"

[dependencies.drone-stm32-map-pieces-11]
version = "=0.10.2"
path = "11"

[dependencies.drone-stm32-map-pieces-12]
version = "=0.10.2"
path = "12"

[build-dependencies.drone-stm32-map-svd]
version = "=0.10.2"
path = "../../svd"
