cargo-features = ["resolver"]

[package]
name = "drone-stm32-map-pieces"
version = "0.14.0"
authors = ["Valentine Valyaeff <valentine.valyaeff@gmail.com>"]
edition = "2018"
resolver = "2"
repository = "https://github.com/drone-os/drone-stm32-map"
homepage = "https://www.drone-os.com/"
documentation = "https://api.drone-os.com/drone-stm32-map/0.14/drone_stm32_map_pieces/"
license = "MIT OR Apache-2.0"
description = """
STM32 peripheral mappings for Drone, an Embedded Operating System.
"""

[lib]
path = "lib.rs"

[dependencies.drone-core]
version = "0.14.0"
path = "../../../drone-core"

[dependencies.drone-cortexm]
version = "0.14.0"
path = "../../../drone-cortexm"

[dependencies.drone-stm32-map-pieces-1]
version = "=0.14.0"
path = "1"

[dependencies.drone-stm32-map-pieces-2]
version = "=0.14.0"
path = "2"

[dependencies.drone-stm32-map-pieces-3]
version = "=0.14.0"
path = "3"

[dependencies.drone-stm32-map-pieces-4]
version = "=0.14.0"
path = "4"

[dependencies.drone-stm32-map-pieces-5]
version = "=0.14.0"
path = "5"

[dependencies.drone-stm32-map-pieces-6]
version = "=0.14.0"
path = "6"

[dependencies.drone-stm32-map-pieces-7]
version = "=0.14.0"
path = "7"

[dependencies.drone-stm32-map-pieces-8]
version = "=0.14.0"
path = "8"

[dependencies.drone-stm32-map-pieces-9]
version = "=0.14.0"
path = "9"

[dependencies.drone-stm32-map-pieces-10]
version = "=0.14.0"
path = "10"

[dependencies.drone-stm32-map-pieces-11]
version = "=0.14.0"
path = "11"

[dependencies.drone-stm32-map-pieces-12]
version = "=0.14.0"
path = "12"

[build-dependencies.drone-stm32-map-svd]
version = "=0.14.0"
path = "../../svd"
