[package]
name = "drone-stm32-map-pieces"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
documentation = "https://api.drone-os.com/drone-stm32-map/0.15/drone_stm32_map_pieces/"
description = """
STM32 peripheral mappings for Drone, an Embedded Operating System.
"""

[lib]
path = "lib.rs"

[dependencies]
drone-core.workspace = true
drone-cortexm.workspace = true
drone-stm32-map-pieces-10.workspace = true
drone-stm32-map-pieces-11.workspace = true
drone-stm32-map-pieces-12.workspace = true
drone-stm32-map-pieces-1.workspace = true
drone-stm32-map-pieces-2.workspace = true
drone-stm32-map-pieces-3.workspace = true
drone-stm32-map-pieces-4.workspace = true
drone-stm32-map-pieces-5.workspace = true
drone-stm32-map-pieces-6.workspace = true
drone-stm32-map-pieces-7.workspace = true
drone-stm32-map-pieces-8.workspace = true
drone-stm32-map-pieces-9.workspace = true

[build-dependencies]
drone-stm32-map-svd.workspace = true
