cargo-features = ["resolver"]

[package]
name = "drone-stm32-map-periph-gpio"
version = "0.14.0"
authors = ["Valentine Valyaeff <valentine.valyaeff@gmail.com>"]
edition = "2018"
resolver = "2"
repository = "https://github.com/drone-os/drone-stm32-map"
homepage = "https://www.drone-os.com/"
documentation = "https://api.drone-os.com/drone-stm32-map/0.14/drone_stm32_map_periph_gpio/"
license = "MIT OR Apache-2.0"
description = """
STM32 peripheral mappings for Drone, an Embedded Operating System.
"""

[lib]
path = "lib.rs"

[dependencies.drone-core]
version = "0.14.0"
path = "../../../../drone-core"

[dependencies.drone-cortexm]
version = "0.14.0"
path = "../../../../drone-cortexm"

[dependencies.drone-stm32-map-pieces]
version = "=0.14.0"
path = "../../pieces"
