[package]
name = "drone-stm32-map-periph-rtc"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
documentation = "https://api.drone-os.com/drone-stm32-map/0.15/drone_stm32_map_periph_rtc/"
description = """
STM32 peripheral mappings for Drone, an Embedded Operating System.
"""

[lib]
path = "lib.rs"

[dependencies]
drone-core.workspace = true
drone-cortexm.workspace = true
drone-stm32-map-pieces.workspace = true
