[package]
name = "drone-stm32-map-pieces-11"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
documentation = "https://api.drone-os.com/drone-stm32-map/0.15/drone_stm32_map_pieces_11/"
description = """
STM32 peripheral mappings for Drone, an Embedded Operating System.
"""

[lib]
path = "lib.rs"

[dependencies]
drone-core.workspace = true
drone-cortexm = { workspace = true, features = ["bit-band"] }

[build-dependencies]
drone-stm32-map-svd.workspace = true
